first tasks added

--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Personal CV Page</title>
+</head>
+<body>
+    <div id="intro_section">
+        <p id="name">Mark Eke</p>
+        <p id="email">ekemarkonyekachi22@gmail.com</p>
+        <p>
+            <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY" alt="personal Image" id="person_image">
+        </p>
+    </div>
+</body>
 </html>
