--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="intro_section">
         <p id="name">Mark Eke</p>
         <p id="email">ekemarkonyekachi22@gmail.com</p>
-        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY" alt="personal Image" id="person_image">
+        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY" alt="personal Image" id="personal_image">
     </div>
 </body>
 </html>
