--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal CV Page</title>
-    <link rel="shortcut icon" href="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY" type="image/x-icon">
+    <link rel="shortcut icon"
+        href="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/
+        profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&
+        v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
+        type="image/x-icon">
 </head>
 <body>
     <div id="intro_section">
         <p id="name">Mark Eke</p>
         <p id="email">ekemarkonyekachi22@gmail.com</p>
-        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY" alt="personal Image" id="personal_image">
+        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/
+        profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&
+        v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
+            alt="personal Image" id="personal_image">
     </div>
 </body>
 </html>
