--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Copyright 2022 Karm Designs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +8,8 @@
     <title>Personal CV Page</title>
     <link rel="shortcut icon"
         href="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/
-        profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&
-        v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
+profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&
+v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
         type="image/x-icon">
 </head>
 <body>
@@ -16,9 +17,9 @@
         <p id="name">Mark Eke</p>
         <p id="email">ekemarkonyekachi22@gmail.com</p>
         <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/
-        profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&
-        v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
-            alt="personal Image" id="personal_image">
+profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&
+v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
+            alt="personal Image" id="personal_image" width="400">
     </div>
 </body>
 </html>
