--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright 2022 Karm Designs -->
+<!-- Copyright 2013 SonarSource SA -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +19,7 @@ v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
         <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/
 profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&
 v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
-            alt="personal Image" id="personal_image" width="400">
+            alt="personal Image" id="personal_image" width="400" height="400">
     </div>
 </body>
 </html>
