--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&
 v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
         type="image/x-icon">
+        <style>
+            #intro_section{
+                display: flex;
+                flex-direction: row;
+            }
+            #name, #email{
+                color: #161B40
+            }
+        </style>
 </head>
 <body>
     <div id="intro_section">
