implemented 3rd part

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!-- Copyright 2013 SonarSource SA -->
 <!DOCTYPE html>
+<!-- Copyright 2022 Karm Designs KD -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@ v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
                 display: flex;
                 flex-direction: row;
             }
-            #name, #email{
+            #name, #email, #education_heading{
                 color: #161B40
             }
         </style>
@@ -29,6 +29,31 @@ v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
 profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&
 v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
             alt="personal Image" id="personal_image" width="400" height="400">
+    </div>
+
+    <div id="education_section">
+        <h1 id="education_heading">
+            Education
+        </h1>
+        <table>
+            <thead>
+                <th class="table_heading">Institute</th>
+                <th class="table_heading">Time</th>
+                <th class="table_heading">Results</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="table_data">Decagon</td>
+                    <td class="table_data">Jan 2022 till Date</td>
+                    <td class="table_data">B</td>
+                </tr>
+                <tr>
+                    <td class="table_data">Digital Dreams</td>
+                    <td class="table_data">Jan 2019 till Jan 2022</td>
+                    <td class="table_data">B</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
