added caption to table

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
             Education
         </h1>
         <table>
+            <caption>My Education</caption>
             <thead>
                 <th class="table_heading">Institute</th>
                 <th class="table_heading">Time</th>
