tried fixing header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Copyright 2022 Karm Designs KD -->
+<!-- Copyright 2013 SonarSource SA -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
