worked on 4th section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
                 display: flex;
                 flex-direction: row;
             }
-            #name, #email, #education_heading{
+            #name, #email, #education_heading, #experience_heading{
                 color: #161B40
             }
         </style>
@@ -52,6 +52,29 @@ v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
                     <td class="table_data">Digital Dreams</td>
                     <td class="table_data">Jan 2019 till Jan 2022</td>
                     <td class="table_data">B</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div id="experience_section">
+        <h1 id="experience_heading">
+            Experience
+        </h1>
+        <table>
+            <caption>My work experience</caption>
+            <thead>
+                <tr>
+                    <th class="experience_table_heading">Company</th>
+                    <th class="experience_table_heading">Time</th>
+                    <th class="experience_table_heading">Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="experience_table_data">Decagon</td>
+                    <td class="experience_table_data">Jan 2022</td>
+                    <td class="experience_table_data">Fullstack web developer using python django and react</td>
                 </tr>
             </tbody>
         </table>
