added projects section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
                 display: flex;
                 flex-direction: row;
             }
-            #name, #email, #education_heading, #experience_heading{
+            #name, #email, #education_heading, #experience_heading,
+            #projects_title{
                 color: #161B40
             }
         </style>
@@ -78,6 +79,14 @@ v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
                 </tr>
             </tbody>
         </table>
+    </div>
+
+    <div id="projects_section">
+        <h1 id="projects_title">Projects</h1>
+        <ol id="projects_list">
+            <li>Atlas</li>
+            <li>Kenisce Royal</li>
+        </ol>
     </div>
 </body>
 </html>
