--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<!-- Copyright 2013 SonarSource SA -->
+<!-- 
+* Copyright (c) 2022 Karm Designs
+*
+* This file is licensed under the BSD 3-Clause (the "License").
+* You may not use this file except in compliance with the License.
+* You may obtain a copy of the License at: 
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal CV Page</title>
+    <meta name="description" content="A Personal CV Webpage like this one can be your best 
+    friend when you are looking for a job. It shows off your skills, 
+    experience, and education in an attractive way. Learn how to make your own CV page.">
+    <meta name="keywords" content="resume, cv, portfolio">
+    <meta name="author" content="Karm Designs">
+    <title>My Personal CV Webpage</title>
     <link rel="shortcut icon"
         href="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/
 profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&
