added footer details

--- a/index.html
+++ b/index.html
@@ -99,5 +99,20 @@ v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
             <li>Kenisce Royal</li>
         </ol>
     </div>
+
+    <footer id="footer">
+        <a href="/contact" id="contact_link">Contact Me</a>
+        <div id="sm_links">
+            <a href="https://skillreactor.io" id="sm_facebook">
+                <img src="sm_icons/facebook.png" alt="Facebook Icon">
+            </a>
+            <a href="https://skillreactor.io" id="sm_twitter">
+                <img src="sm_icons/twitter.png" alt="twitter Icon">
+            </a>
+            <a href="https://skillreactor.io" id="sm_linkedin">
+                <img src="sm_icons/linkedin.png" alt="linkedin Icon">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
