--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@ v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
         <a href="/contact" id="contact_link">Contact Me</a>
         <div id="sm_links">
             <a href="https://skillreactor.io" id="sm_facebook">
-                <img src="sm_icons/facebook.png" alt="Facebook Icon">
+                <img src="sm_icons/facebook.png" alt="Facebook Icon" width="15" height="15">
             </a>
             <a href="https://skillreactor.io" id="sm_twitter">
-                <img src="sm_icons/twitter.png" alt="twitter Icon">
+                <img src="sm_icons/twitter.png" alt="twitter Icon" width="15" height="15">
             </a>
             <a href="https://skillreactor.io" id="sm_linkedin">
-                <img src="sm_icons/linkedin.png" alt="linkedin Icon">
+                <img src="sm_icons/linkedin.png" alt="linkedin Icon" width="15" height="15">
             </a>
         </div>
     </footer>
