--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="https://media-exp1.licdn.com/dms/image/C4E03AQHHSJhGCAeJ3g/
+profile-displayphoto-shrink_400_400/0/1643556413291?e=1672876800&
+v=beta&t=fTHnUcFIYJTb3qNu28LoIppVRqXO5gcaN4k0PrqQ1EY"
+      type="image/x-icon"
+    />
     <title>Contact Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1 id="contact_heading">Contact</h1>
     <form action="">
-        <input type="text" name="email" id="email_field" placeholder="Email">
-        <textarea name="message_field" id="message_field" cols="30" rows="10" placeholder="Message Field"></textarea>
-        <button type="submit" id="submit_button">Submit</button>
+      <label for="email_field">Email Field</label>
+      <input type="text" name="email" id="email_field" placeholder="Email" />
+      <label for="message_field">Message Field</label>
+      <textarea
+        name="message_field"
+        id="message_field"
+        cols="30"
+        rows="10"
+        placeholder="Message Field"
+      ></textarea>
+      <button type="submit" id="submit_button">Submit</button>
     </form>
-</body>
+  </body>
 </html>
